--- a/app/templates/_form.html
+++ b/app/templates/_form.html
@@ -1,27 +1,12 @@
 <form ng-submit="save()">
   <label>
-    <span>Image URL</span>
-    <input type="text" ng-model="note.image" ng-change="changed()">
-  </label>
-
-  <label>
     <span>Title</span>
     <input type="text" ng-model="note.title" ng-change="changed()">
   </label>
 
   <label>
-    <span>Author name</span>
-    <input type="text" ng-model="note.author.name" ng-change="changed()">
-  </label>
-
-  <label>
-    <span>Author title</span>
-    <input type="text" ng-model="note.author.title" ng-change="changed()">
-  </label>
-
-  <label>
-    <span>Publish date</span>
-    <input type="text" ng-model="note.publishDate" ng-change="changed()">
+    <span>Creation date</span>
+    <input type="text" ng-model="note.created_at" ng-change="changed()">
   </label>
 
   <label>
