Use markdown directive to render note.body

--- a/app/templates/show.html
+++ b/app/templates/show.html
@@ -9,5 +9,5 @@
     <a class="edit-link" ng-href="/notes/{{ note.id }}/edit">Edit this note</a>
   </div>
 
-  <div class="note-body">{{ note.body }}</div>
+  <div markdown="note.body" class="note-body"></div>
 </div>
