Fix error rendering in show template

--- a/app/templates/show.html
+++ b/app/templates/show.html
@@ -1,4 +1,4 @@
-<p ng-cloak>{{ error }}</p>
+<p ng-if="error" ng-cloak>{{ error }}</p>
 
 <div class="note-show">
   <h1 class="note-title">{{ note.title }}</h1>
