--- a/app/templates/_form.html
+++ b/app/templates/_form.html
@@ -1,4 +1,4 @@
-<form ng-submit="save()">
+<form click-elsewhere="save()" ng-submit="save()">
   <label>
     <span>Title</span>
     <input type="text" ng-model="note.title" ng-change="changed()">
@@ -16,4 +16,3 @@
 
   <button type="submit">Save</button>
 </form>
-
