Add click to edit funcationality to show template

--- a/app/templates/show.html
+++ b/app/templates/show.html
@@ -1,12 +1,11 @@
 <p ng-if="error" ng-cloak>{{ error }}</p>
 
-<div class="note-show">
+<div ng-click="edit()" class="note-show">
   <h1 class="note-title">{{ note.title }}</h1>
 
   <div class="note-metadata">
     <p class="date">Created {{ note.created_at | date:'M/d/yyyy h:mm a' }}</p>
     <p class="date">Updated {{ note.updated_at | date:'M/d/yyyy h:mm a' }}</p>
-    <a class="edit-link" ng-href="/notes/{{ note.id }}/edit">Edit this note</a>
   </div>
 
   <div markdown="note.body" class="note-body"></div>
