--- a/app/templates/_form.html
+++ b/app/templates/_form.html
@@ -1,18 +1,7 @@
 <form click-elsewhere="save()" ng-submit="save()">
-  <label>
-    <span>Title</span>
-    <input type="text" ng-model="note.title" ng-change="changed()">
-  </label>
-
-  <label>
-    <span>Creation date</span>
-    <input type="text" ng-model="note.created_at" ng-change="changed()">
-  </label>
-
-  <label>
-    <span>Body</span>
-    <textarea ng-model="note.body" ng-change="changed()"></textarea>
-  </label>
+  <input type="text" ng-model="note.title" ng-change="changed()" placeholder="title">
+  <input type="text" ng-model="note.created_at" ng-change="changed()" placeholder="created date">
+  <textarea ng-model="note.body" ng-change="changed()" placeholder="body"></textarea>
 
   <button type="submit">Save</button>
 </form>
