--- a/app/templates/_form.html
+++ b/app/templates/_form.html
@@ -1,4 +1,4 @@
-<form click-elsewhere="save()" ng-submit="save()">
+<form ng-submit="save()">
   <input type="text" ng-model="note.title" ng-change="changed()" placeholder="title">
 
   <label>
