--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,3 +1,3 @@
 <p ng-if="error" ng-cloak>{{ error }}</p>
 
-<ng-include src="'templates/_form.html'"></ng-include>
+<ng-include src="'assets/templates/_form.html'"></ng-include>
